--- a/www/lang/de_DE/menu.txt
+++ b/www/lang/de_DE/menu.txt
@@ -95,6 +95,8 @@ page_title_stat_ref:            Referrer anzeigen & verwalten
 page_link_stat_ref:             Referrer
 page_title_stat_space:          Speicherplatz Übersicht
 page_link_stat_space:           Speicherplatz
+page_title_sitemap:             Sitemap verwalten
+page_link_sitemap:              Sitemap
 
 # News
 page_title_news_config:         Konfiguration ändern
